# tariffa

./: .gitignore  .prettierignore  CLAUDE.md  PLAYS.md  README.md  TODO.md  package.json  pnpm-lock.yaml
.claude/: CLAUDE.md  VALUES.md  mcp.json  settings.local.json
.claude/agents/: api-contract-writer.md  build-validator.md  code-review.md  dev-server-monitor.md  integration-tester.md  prd-writer.md  qa-spec-writer.md  refactor-agent.md  reliability-auditor.md  research-agent.md  ui-ux-expert.md
.claude/commands/: eod.md  review-and-plan.md  sod.md
.claude/memory/: ROUTING.md
.claude/rules/: ai-human-engineering-stack.md  api-routes.md  auto-design-shotgun.md  auto-investigate.md  barrel-exports.md  code-quality.md  collaboration.md  (+7 more)
.husky/: naming-check.mjs  pre-commit
apps/api/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
apps/api/src/: db.py  main.py
apps/api/src/agents/: classification.py  compliance.py  extraction.py  form_drafting.py  ping.py
apps/api/src/kb/: __init__.py
apps/api/src/models/: __init__.py  classification.py  common.py  compliance.py  extraction.py  form.py
apps/api/src/routes/: health.py  ping.py
apps/api/tests/: test_extraction.py  test_health.py  test_models.py
apps/api/tests/fixtures/: .gitignore  README.md  generate_sample_invoice.py
docs/: 01-product-vision.md  02-architecture.md  03-agent-pipeline.md  04-data-models.md  05-build-phases.md  06-regulatory-knowledge-base.md  07-repository-setup.md  08-deployment.md
references/: ai-provider-configuration.md  gemini-structured-output-guide.md
(+53 files in other folders)
