[project]
name = "tariffa-api"
version = "0.1.0"
description = "Tariffa API — agent pipeline, database, file storage, and LLM orchestration."
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.43.30",
    "fastapi>=0.137.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2",
    "pydantic-ai>=1,<2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "reportlab>=5.0.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
# `async def` tests run without a per-test marker.
asyncio_mode = "auto"
